--- a/src/Style/InputField.less
+++ b/src/Style/InputField.less
@@ -1,16 +1,16 @@
 .inputField {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 5px;
     
     .field {
         background-color: #ffffff;
         border-radius: 6px;
-        border-color: #D0D7DD;
+        border: 1px solid #777;
         line-height: 1.25;
         color: #000000;
-        height: 30px;
-        font-size: 14px;
-        padding-right: 25px;
-        font-weight: bold;
+        height: 22px;
+        padding: 10px 25px 10px 10px;
     }
 }
