--- a/src/Style/LoginForm.less
+++ b/src/Style/LoginForm.less
@@ -1,6 +1,22 @@
-.main {
+.loginForm {
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto;
     display: flex;
-    margin: 5px 15px;
-    padding: 2px;
     flex-direction: column;
+
+    .submitButton {
+        padding: 10px 15px;
+        background-color: rgb(70, 153, 179);
+        color: white;
+        border: 1px solid rgb(70, 153, 179);
+        border-radius: 6px;
+        background-color: 250ms;
+    }
+
+    .submitButton:hover {
+        cursor: pointer;
+        background-color: white;
+        color: rgb(70, 153, 179);
+    }
 }
