added react router, update styles

--- a/src/Style/LoginForm.less
+++ b/src/Style/LoginForm.less
@@ -5,6 +5,16 @@
     display: flex;
     flex-direction: column;
 
+    .alert {
+        background-color: rgb(70, 145, 156);
+        border: 1px solid rgb(70, 173, 156);
+        color: white;
+        border-radius: 10px;
+        margin: 10px 0px;
+        text-align: center;
+        padding: 15px;
+    }
+
     .submitButton {
         padding: 10px 15px;
         background-color: rgb(70, 153, 179);
