--- a/src/Style/InputField.less
+++ b/src/Style/InputField.less
@@ -13,4 +13,9 @@
         height: 22px;
         padding: 10px 25px 10px 10px;
     }
+
+    .field:focus {
+        border: 2px solid rgb(70, 153, 179);
+        box-shadow: 2px 2px 4px rgba(0,0,0,.075), 0px 1px 8px rgb(70,153,173);
+    }
 }
