--- a/src/Style/App.less
+++ b/src/Style/App.less
@@ -1,5 +1,24 @@
-.main {
-    font-family: sans-serif;
-    font-size: 14px;
-    white-space: nowrap;
+@layout_background: #fff;
+
+#components-layout-demo-custom-trigger .trigger {
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+
+#components-layout-demo-custom-trigger .trigger:hover {
+    color: #1890ff;
+}
+
+.site_layout .site_layout_header {
+    background: @layout_background;
+}
+
+.site_layout_content {
+    background: @layout_background;
+    margin: 24px 16px;
+    padding: 24;
+    min-height: 280px;
 }
