--- a/src/Style/App.less
+++ b/src/Style/App.less
@@ -16,9 +16,9 @@
     background: @layout_background;
 }
 
-.site_layout_content {
+.site_layout .site_layout_content {
     background: @layout_background;
     margin: 24px 16px;
-    padding: 24;
-    min-height: 280px;
+    padding: 24px;
+    min-height: 600px;
 }
