Added an logout button. Minor code changes.

--- a/src/Style/App.less
+++ b/src/Style/App.less
@@ -12,13 +12,15 @@
     color: #1890ff;
 }
 
-.site_layout .site_layout_header {
-    background: @layout_background;
-}
+.site_layout {
+    .site_layout_header {
+        background: @layout_background;
+    }
 
-.site_layout .site_layout_content {
-    background: @layout_background;
-    margin: 24px 16px;
-    padding: 24px;
-    min-height: 600px;
+    .site_layout_content {
+        background: @layout_background;
+        margin: 24px 16px;
+        padding: 24px;
+        min-height: 80vh;
+    }
 }
