Added internationalization. Refactoring.

--- a/src/Style/HeaderPanel.less
+++ b/src/Style/HeaderPanel.less
@@ -4,6 +4,9 @@
     justify-content: end;
     padding: 10px 0px;
 
+    .header_layout_i18n {
+        margin-right: 15px;
+    }
     .header_layout_avatar {
         margin-right: 15px;
     }
