configured ignore Login.test.tsx in tests. code formatting.

--- a/src/Style/InputField.less
+++ b/src/Style/InputField.less
@@ -1,21 +1,21 @@
 .inputField {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 5px;
-    
-    .field {
-        background-color: #ffffff;
-        border-radius: 6px;
-        border: 1px solid #777;
-        line-height: 1.25;
-        color: #000000;
-        height: 22px;
-        padding: 10px 25px 10px 10px;
-    }
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 5px;
 
-    .field:focus {
-        border: 2px solid rgb(70, 153, 179);
-        box-shadow: 2px 2px 4px rgba(0,0,0,.075), 0px 1px 8px rgb(70,153,173);
-    }
+  .field {
+    background-color: #ffffff;
+    border-radius: 6px;
+    border: 1px solid #777;
+    line-height: 1.25;
+    color: #000000;
+    height: 22px;
+    padding: 10px 25px 10px 10px;
+  }
+
+  .field:focus {
+    border: 2px solid rgb(70, 153, 179);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.075), 0px 1px 8px rgb(70, 153, 173);
+  }
 }
