--- a/src/Style/App.less
+++ b/src/Style/App.less
@@ -24,3 +24,16 @@
     min-height: 80vh;
   }
 }
+
+.loading_spin {
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 30px 50px;
+  margin: 20px 0;
+}
+
+.about_me {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
